Support for sculk activation between ships, the world and other ships.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -29,4 +29,7 @@ dependencies {
 
     // HT's Treechop
     modCompileOnly("maven.modrinth:treechop:tIdTnzkf")
+
+    // Echo Chest
+    modCompileOnly("maven.modrinth:echo-chest:ppi4nxw2")
 }
