--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -54,6 +54,11 @@ dependencies {
     // HT's Treechop
     modImplementation("maven.modrinth:treechop:bLPE7MWZ") // different version than in `common`
 
+    // PuzzlesLib
+    modImplementation("maven.modrinth:puzzles-lib:qjSRRf2B")
+    // Echo Chest
+    modImplementation("maven.modrinth:echo-chest:ppi4nxw2")
+
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
 }
