--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -56,8 +56,11 @@ dependencies {
     // HT's Treechop
     modImplementation("maven.modrinth:treechop:0.19.0")
 
+    // Echo Chest
+    modImplementation("maven.modrinth:echo-chest:aQcerSRS")
+
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
-    shadowBundle project(path: ':common', configuration: 'transformProductionForge')
+    shadowBundle(project(path: ':common', configuration: 'transformProductionForge')) { transitive false }
 }
 
 processResources {
