--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,13 @@ conditional_mixin=0.6.2
 # Mods
 vs2_version=2.3.0-beta.5+bcda04a482
 vs_core_version=1.1.0+b19b27c4a4
+
+# Create - Fabric
+create_fabric_version=0.5.1-f-build.1335+mc1.20.1
+port_lib_version = 2.3.3
+
+# Create - Forge
+create_forge_version=0.5.1.f-26
+registrate_forge_version=MC1.20-1.3.11
+flywheel_forge_minecraft_version=1.20.1
+flywheel_forge_version=0.6.10-7
