--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,10 @@ subprojects {
                 includeGroup("maven.modrinth")
             }
         }
+        maven {
+            name = "Fuzs Mod Resources"
+            url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/"
+        }
         // Mods
         maven { url = "https://mvn.devos.one/snapshots/" } // Fabric Create, Porting Lib, Forge Tags, Milk Lib
         maven { url = "https://maven.tterrag.com/" } // Registrate, Forge Create and Flywheel
