--- a/common/build.gradle
+++ b/common/build.gradle
@@ -35,4 +35,7 @@ dependencies {
 
     // Create
     modCompileOnly("com.simibubi.create:create-fabric-${minecraft_version}:${create_fabric_version}")
+
+    // Forge Config API Port
+    modApi("maven.modrinth:forge-config-api-port:1aKtMQZE")
 }
