--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,10 @@
 # Done to increase the memory available to Gradle.
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.console=verbose
+org.gradle.logging.level=debug
+org.gradle.daemon=true
 
 # Mod properties
 mod_version = 1.0.0
