Looks like we've got a proper dev env. Added branding.

--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -28,6 +28,7 @@ configurations {
         canBeResolved = true
         canBeConsumed = false
     }
+    shadowCommon
 }
 
 dependencies {
@@ -47,11 +48,11 @@ dependencies {
 
     // Valkyrien Skies 2
     modApi("org.valkyrienskies:valkyrienskies-120-forge:${rootProject.vs2_version}") { transitive = false }
-    implementation("org.valkyrienskies.core:api:${rootProject.vs_core_version}")
-    implementation("org.valkyrienskies.core:api-game:${rootProject.vs_core_version}")
-    implementation("org.valkyrienskies.core:util:${rootProject.vs_core_version}")
-    implementation("org.valkyrienskies.core:impl:${rootProject.vs_core_version}")
-    implementation("thedarkcolour:kotlinforforge:$forge_kotlin_version")
+    forgeRuntimeLibrary implementation("org.valkyrienskies.core:api:${rootProject.vs_core_version}") { transitive = false }
+    //implementation("org.valkyrienskies.core:api-game:${rootProject.vs_core_version}") { transitive = false }
+    forgeRuntimeLibrary implementation("org.valkyrienskies.core:util:${rootProject.vs_core_version}") { transitive = false }
+    //forgeRuntimeLibrary implementation("org.valkyrienskies.core:impl:${rootProject.vs_core_version}") { transitive = false }
+    forgeRuntimeLibrary implementation("thedarkcolour:kotlinforforge:$forge_kotlin_version")
 
     // region Manually include every single dependency of vs-core (total meme)
     /*forgeRuntimeLibrary include("org.valkyrienskies.core:api:${rootProject.vs_core_version}") {
@@ -74,21 +75,21 @@ dependencies {
     // Jackson Binary Dataformat for Object Serialization
     def jacksonVersion = '2.14.0'
     // forked to remove module-info
-    implementation("com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion-rubyfork") { transitive = false }
-    implementation("com.fasterxml.jackson.module:jackson-module-parameter-names:$jacksonVersion") { transitive = false }
-    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:$jacksonVersion") { transitive = false }
-    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") { transitive = false }
-    implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion") { transitive = false }
-    implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") { transitive = false }
-    implementation("com.github.Rubydesic:jackson-kotlin-dsl:1.2.0") { transitive = false }
-    implementation("com.networknt:json-schema-validator:1.0.71") { transitive = false }
-    implementation("com.ethlo.time:itu:1.7.0") { transitive = false }
-    implementation("com.github.victools:jsonschema-module-jackson:4.25.0") { transitive = false }
-    implementation("com.github.victools:jsonschema-generator:4.25.0") { transitive = false }
-    implementation("com.fasterxml:classmate:1.5.1") { transitive = false }
-    implementation("com.flipkart.zjsonpatch:zjsonpatch:0.4.11") { transitive = false }
-    implementation("org.apache.commons:commons-collections4:4.3") { transitive = false }
-    implementation("com.google.dagger:dagger:2.43.2") { transitive = false }
+    forgeRuntimeLibrary implementation("com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVersion-rubyfork") { transitive = false }
+    forgeRuntimeLibrary implementation("com.fasterxml.jackson.module:jackson-module-parameter-names:$jacksonVersion") { transitive = false }
+    forgeRuntimeLibrary implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:$jacksonVersion") { transitive = false }
+    forgeRuntimeLibrary implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion") { transitive = false }
+    forgeRuntimeLibrary implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion") { transitive = false }
+    forgeRuntimeLibrary implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") { transitive = false }
+    forgeRuntimeLibrary implementation("com.github.Rubydesic:jackson-kotlin-dsl:1.2.0") { transitive = false }
+    forgeRuntimeLibrary implementation("com.networknt:json-schema-validator:1.0.71") { transitive = false }
+    forgeRuntimeLibrary implementation("com.ethlo.time:itu:1.7.0") { transitive = false }
+    forgeRuntimeLibrary implementation("com.github.victools:jsonschema-module-jackson:4.25.0") { transitive = false }
+    forgeRuntimeLibrary implementation("com.github.victools:jsonschema-generator:4.25.0") { transitive = false }
+    forgeRuntimeLibrary implementation("com.fasterxml:classmate:1.5.1") { transitive = false }
+    forgeRuntimeLibrary implementation("com.flipkart.zjsonpatch:zjsonpatch:0.4.11") { transitive = false }
+    forgeRuntimeLibrary implementation("org.apache.commons:commons-collections4:4.3") { transitive = false }
+    forgeRuntimeLibrary implementation("com.google.dagger:dagger:2.43.2") { transitive = false }
 
     // endregion
 
@@ -96,14 +97,23 @@ dependencies {
     // HT's Treechop
     modImplementation("maven.modrinth:treechop:0.19.0")
 
+    // PuzzlesLib
+    modImplementation("maven.modrinth:puzzles-lib:YFZdsqXl")
+    // Why again do we have to explicitly include embedded stuff? F the Forge side of Architectury.
+    modImplementation("fuzs.puzzlesaccessapi:puzzlesaccessapi-forge:20.1.1")
     // Echo Chest
-    //modImplementation("maven.modrinth:echo-chest:aQcerSRS")
+    modImplementation("maven.modrinth:echo-chest:aQcerSRS")
 
     // Create
     modImplementation("com.simibubi.create:create-${minecraft_version}:${create_forge_version}:slim") { transitive = false }
     modImplementation("com.tterrag.registrate:Registrate:${registrate_forge_version}")
     modImplementation("com.jozufozu.flywheel:flywheel-forge-${flywheel_forge_minecraft_version}:${flywheel_forge_version}")
     // endregion
+
+    // QoL, performance, utils
+    modLocalRuntime("maven.modrinth:embeddium:${embeddium_version}")
+    modLocalRuntime("maven.modrinth:canary:${canary_version}")
+    modLocalRuntime("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
 
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle(project(path: ':common', configuration: 'transformProductionForge')) { transitive false }
