--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -64,6 +64,13 @@ dependencies {
     modImplementation("com.simibubi.create:create-fabric-${minecraft_version}:${create_fabric_version}")
     // endregion
 
+    // QoL, performance, utils
+    modLocalRuntime("maven.modrinth:sodium:${sodium_version}")
+    modLocalRuntime("maven.modrinth:indium:${indium_version}")
+    modLocalRuntime("maven.modrinth:lazydfu:${lazydfu_version}")
+    modLocalRuntime("com.terraformersmc:modmenu:${modmenu_version}")
+    modLocalRuntime("mezz.jei:jei-${minecraft_version}-fabric:${jei_version}")
+
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
 }
