--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.logging.level=debug
 org.gradle.daemon=true
 
 # Mod properties
-mod_version = 1.0.0
+mod_version = 0.1.0
 maven_group = io.github.zaafonin.vs_oddities
 archives_name = vs_oddities
 enabled_platforms = fabric,forge
@@ -40,3 +40,28 @@ create_forge_version=0.5.1.f-26
 registrate_forge_version=MC1.20-1.3.11
 flywheel_forge_minecraft_version=1.20.1
 flywheel_forge_version=0.6.10-7
+
+# Development QOL
+# Create Fabric supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
+# set to disabled to have none of them.
+fabric_recipe_viewer = jei
+# JEI - https://www.curseforge.com/minecraft/mc-mods/jei/files/all
+jei_version = 15.2.0.25
+# REI - https://modrinth.com/mod/rei/versions
+rei_version = 12.0.684
+# EMI - https://modrinth.com/mod/emi/versions
+emi_version = 1.1.3+1.20.1
+
+# Mod Menu - https://modrinth.com/mod/modmenu/versions
+modmenu_version = 7.2.2
+# LazyDFU - https://modrinth.com/mod/lazydfu/versions
+lazydfu_version = 0.1.3
+# Sodium - https://modrinth.com/mod/sodium/versions
+sodium_version = mc1.20.1-0.5.11
+# Indium - https://modrinth.com/mod/indium/versions
+indium_version = 1.0.36+mc1.20.1
+
+# Embeddium - https://modrinth.com/mod/sodium/versions
+embeddium_version = 0.3.31+mc1.20.1
+# Canary - https://modrinth.com/mod/canary/versions
+canary_version = mc1.20.1-0.3.3
