--- a/gradle.properties
+++ b/gradle.properties
@@ -36,21 +36,19 @@ create_fabric_version=0.5.1-f-build.1335+mc1.20.1
 port_lib_version = 2.3.3
 
 # Create - Forge
-create_forge_version=0.5.1.f-26
-registrate_forge_version=MC1.20-1.3.11
+create_forge_version=0.5.1.j-55
+registrate_forge_version=MC1.20-1.3.3
 flywheel_forge_minecraft_version=1.20.1
-flywheel_forge_version=0.6.10-7
+flywheel_forge_version=0.6.11-13
+
+# Destroy
+# Do not update, newer versions drop Create 0.5.1 compat.
+petrolpark_version=1.20.1-1.4.2
+destroy_version=1.20.1-0.1.1
 
 # Development QOL
-# Create Fabric supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
-# set to disabled to have none of them.
-fabric_recipe_viewer = jei
 # JEI - https://www.curseforge.com/minecraft/mc-mods/jei/files/all
-jei_version = 15.2.0.25
-# REI - https://modrinth.com/mod/rei/versions
-rei_version = 12.0.684
-# EMI - https://modrinth.com/mod/emi/versions
-emi_version = 1.1.3+1.20.1
+jei_version = 15.12.3.55
 
 # Mod Menu - https://modrinth.com/mod/modmenu/versions
 modmenu_version = 7.2.2
