--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -32,34 +32,34 @@ configurations {
 }
 
 dependencies {
-    forge "net.minecraftforge:forge:$rootProject.forge_version"
+    forge "net.minecraftforge:forge:$forge_version"
 
     // Architectury API. This is optional, and you can comment it out if you don't need it.
-    modImplementation "dev.architectury:architectury-forge:$rootProject.architectury_api_version"
+    modImplementation "dev.architectury:architectury-forge:$architectury_api_version"
 
     // Mixin Extras
-    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${rootProject.mixin_extras}"))
-    implementation(include("io.github.llamalad7:mixinextras-forge:${rootProject.mixin_extras}"))
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixin_extras}"))
+    implementation(include("io.github.llamalad7:mixinextras-forge:${mixin_extras}"))
     // Mixin Squared
-    compileOnly(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-common:${rootProject.mixin_squared}"))
-    implementation(include("com.github.bawnorton.mixinsquared:mixinsquared-forge:${rootProject.mixin_squared}"))
+    compileOnly(annotationProcessor("com.github.bawnorton.mixinsquared:mixinsquared-common:${mixin_squared}"))
+    implementation(include("com.github.bawnorton.mixinsquared:mixinsquared-forge:${mixin_squared}"))
     // Conditional Mixin
-    implementation(include("me.fallenbreath:conditional-mixin-forge:${rootProject.conditional_mixin}"))
+    implementation(include("me.fallenbreath:conditional-mixin-forge:${conditional_mixin}"))
 
     // Valkyrien Skies 2
-    modApi("org.valkyrienskies:valkyrienskies-120-forge:${rootProject.vs2_version}") { transitive = false }
-    forgeRuntimeLibrary implementation("org.valkyrienskies.core:api:${rootProject.vs_core_version}") { transitive = false }
-    //implementation("org.valkyrienskies.core:api-game:${rootProject.vs_core_version}") { transitive = false }
-    forgeRuntimeLibrary implementation("org.valkyrienskies.core:util:${rootProject.vs_core_version}") { transitive = false }
-    //forgeRuntimeLibrary implementation("org.valkyrienskies.core:impl:${rootProject.vs_core_version}") { transitive = false }
+    modApi("org.valkyrienskies:valkyrienskies-120-forge:${vs2_version}") { transitive = false }
+    forgeRuntimeLibrary implementation("org.valkyrienskies.core:api:${vs_core_version}") { transitive = false }
+    //implementation("org.valkyrienskies.core:api-game:${vs_core_version}") { transitive = false }
+    forgeRuntimeLibrary implementation("org.valkyrienskies.core:util:${vs_core_version}") { transitive = false }
+    //forgeRuntimeLibrary implementation("org.valkyrienskies.core:impl:${vs_core_version}") { transitive = false }
     forgeRuntimeLibrary implementation("thedarkcolour:kotlinforforge:$forge_kotlin_version")
 
     // region Manually include every single dependency of vs-core (total meme)
-    /*forgeRuntimeLibrary include("org.valkyrienskies.core:api:${rootProject.vs_core_version}") {
+    /*forgeRuntimeLibrary include("org.valkyrienskies.core:api:${vs_core_version}") {
         transitive = false
     }
 
-    forgeRuntimeLibrary include("org.valkyrienskies.core:util:${rootProject.vs_core_version}") {
+    forgeRuntimeLibrary include("org.valkyrienskies.core:util:${vs_core_version}") {
         transitive = false
     }*/
 
