Fixed some minecart jank, at least in theory. TODO: conserve velocity, would be useful for rollercoasters.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 
     // Forge Config API Port
     modApi("maven.modrinth:forge-config-api-port:1aKtMQZE")
+
+    // VS Addition
+    modCompileOnly("maven.modrinth:vs-addition:1.20.1-0.0.10")
 }
