--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     modImplementation("net.fabricmc:fabric-language-kotlin:1.10.10+kotlin.1.9.10")
     // VS Addition
     //modLocalRuntime("maven.modrinth:vs-addition:1.20.1-0.0.10") { transitive false }
+
+    // Clockwork
+    modImplementation("maven.modrinth:create-clockwork:EvNWNIMY")
     // endregion
 
     // QoL, performance, utils
