--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -107,9 +107,14 @@ dependencies {
     modImplementation("com.simibubi.create:create-${minecraft_version}:${create_forge_version}:slim") { transitive = false }
     modImplementation("com.tterrag.registrate:Registrate:${registrate_forge_version}")
     modImplementation("com.jozufozu.flywheel:flywheel-forge-${flywheel_forge_minecraft_version}:${flywheel_forge_version}")
+    // Clockwork
+    modImplementation("maven.modrinth:create-clockwork:1.20.1-0.1.16")
     // Destroy
     modImplementation("maven.modrinth:petrolpark:${petrolpark_version}")
     //modImplementation("maven.modrinth:destroy:${destroy_version}")
+    // Quark
+    modImplementation("org.violetmoon.zeta:Zeta:1.0-31.143")
+    modImplementation("maven.modrinth:quark:1.20.1-4.0-462")
     // VS Addition
     //modImplementation("maven.modrinth:vs-addition:1.20.1-0.0.10")
     // endregion
